enable connecting to pg server on local host

--- a/hapi-fhir-server/docker-compose.dev.yml
+++ b/hapi-fhir-server/docker-compose.dev.yml
@@ -2,6 +2,8 @@ version: '3.9'
 
 services:
   hapi-fhir:
+    extra_hosts: # for linux hosts since version 20.10
+      - host.docker.internal:host-gateway
     ports:
       - target: 8080
         published: 3447
