made keycloak work locally

--- a/.envrc
+++ b/.envrc
@@ -1,6 +1,5 @@
-#export CLUSTERED_MODE=false
-export CL=false
+#export $(cat .env | xargs)
+# shellcheck disable=SC2038
 # shellcheck disable=SC2046
-# shellcheck disable=SC2002
-export $(cat .env | xargs)
-#export HAPI_DB_SET=$(ip route show | grep -i default | awk '{ print $3}'):5432
+export CLUSTERED_MODE=false
+export $(find . -name '.env' -exec cat {} \; -exec echo \; | xargs)
